<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whitfield.nathan.csis.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mission_btn"
        >
        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:columnCount="4"
            android:rowCount="20"
            android:layout_gravity="center">

            <TextView
                android:padding="10dp"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/year1Header"
                android:id="@+id/textView"
                />

            <TextView
                android:padding="10dp"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:text="@string/year2Header"
                />

            <TextView
                android:padding="10dp"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:text="@string/year3Header"
                android:id="@+id/textView2" />

            <TextView
                android:padding="10dp"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:text="@string/year4Header"
                android:id="@+id/textView3" />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:text="MATH 103"
                />

            <TextView
                android:paddingLeft ="10dp"
                android:paddingBottom="5dp"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:text="COMM 105A"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:text="MATH 161"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="0"
                android:layout_row="4"
                android:layout_columnWeight="1"
                android:text="PHIL 205A\n(or 210B)"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="0"
                android:layout_row="5"
                android:layout_columnWeight="1"
                android:text="CS 105\n(or CS 107A)"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="0"
                android:layout_row="6"
                android:layout_columnWeight="1"
                android:text="CS 146"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="0"
                android:layout_row="7"
                android:layout_columnWeight="1"
                android:text="CS 116"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:text="CS 245"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:text="MATH 162"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:text="RPW 304"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="1"
                android:layout_row="4"
                android:layout_columnWeight="1"
                android:text="CS 216"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="1"
                android:layout_row="5"
                android:layout_columnWeight="1"
                android:text="CIS 255"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="1"
                android:layout_row="6"
                android:layout_columnWeight="1"
                android:text="CIS 311"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:text="MATH 300"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:text="CS 316"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:text="CIS 366"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="4"
                android:layout_columnWeight="1"
                android:text="CS 331"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="5"
                android:layout_columnWeight="1"
                android:text="CIS 355"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="6"
                android:layout_columnWeight="1"
                android:text="CS 411"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="7"
                android:layout_columnWeight="1"
                android:text="Electives"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="8"
                android:layout_columnWeight="1"
                android:text="CS 345"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="9"
                android:layout_columnWeight="1"
                android:text="CIS 357"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="10"
                android:layout_columnWeight="1"
                android:text="CS 431"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="11"
                android:layout_columnWeight="1"
                android:text="CS 476"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="12"
                android:layout_columnWeight="1"
                android:text="CS 482"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="2"
                android:layout_row="13"
                android:layout_columnWeight="1"
                android:text="CS 490"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:text="CS 401"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:text="CS 421"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:text="CS 446"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="4"
                android:layout_columnWeight="1"
                android:text="CS 451"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="5"
                android:layout_columnWeight="1"
                android:text="Electives"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="6"
                android:layout_columnWeight="1"
                android:text="CS 402"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="7"
                android:layout_columnWeight="1"
                android:text="CS 422"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="8"
                android:layout_columnWeight="1"
                android:text="CS 416"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="9"
                android:layout_columnWeight="1"
                android:text="CS 431"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="10"
                android:layout_columnWeight="1"
                android:text="CS 476"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="11"
                android:layout_columnWeight="1"
                android:text="CS 482"
                />

            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_column="3"
                android:layout_row="12"
                android:layout_columnWeight="1"
                android:text="CS 490"
                />
        </GridLayout>
    </ScrollView>
</RelativeLayout>